# traceworks

./: .gitignore  README.md  docker-compose.yml  rfp_sample_2.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: _errors.py  alerts.py  auth.py  dashboard.py  persons.py  projects.py  recommendations.py  reports.py  rfp.py  tasks.py  webhooks.py
backend/app/core/: deps.py  exceptions.py
backend/app/core/inference/: alert_rules.py  issue_rules.py  skill_rules.py  wbs_rules.py
backend/app/core/interpreter/: classifier.py  llm_client.py  prompts.py
backend/app/core/normalizer/: figma.py  github.py  rfp_extractor.py  slack.py
backend/app/core/services/: alert_service.py  auth_service.py  gitlab_service.py  google_slides_service.py  insight_service.py  progress_strategy.py  project_service.py  recommend_service.py  report_service.py  rfp_service.py  wbs_service.py
backend/app/db/: fuseki.py  models.py  postgres.py  sparql_repo.py
backend/app/schemas/: auth.py  dashboard.py  events.py  insights.py  persons.py  projects.py  recommendations.py  rfp.py  tasks.py
backend/app/workers/: celery_app.py  event_tasks.py  report_tasks.py
backend/db/migrations/: 001_auth_and_wbs.sql  002_wbs_history_date_fields.sql  add_approval_columns.sql
backend/db/seeds/: 001_sample_accounts.sql  002_persons.ttl  003_test_project.ttl  004_platform_project.ttl
backend/scripts/: seed_fuseki.py  seed_users.py
backend/tests/: test_api.py  test_inference.py  test_interpreter.py  test_normalizer.py  test_progress_strategy.py  test_recommend_service.py  test_rfp_api.py  test_rfp_extractor.py
backend/tests/fixtures/: rfp_samples.py  sparql_responses.py
demo/: index.html
docs/: api-guide-rfp-analysis-patch.md  mvp_docker_compose.txt  mvp_project_structure.txt  resume-portfolio.md  rfp-analysis-process.md  rfp-viewer.html  (+1 more)
(+19 files in other folders)
