[project]
name = "traceworks-backend"
version = "0.1.0"
description = "Ontology-based AI project management system (Traceworks) backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # PostgreSQL
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Triple store (Fuseki)
    "SPARQLWrapper>=2.0",
    "rdflib>=7.0",
    # Async workers
    "celery>=5.4",
    "redis>=5.0",
    "flower>=2.0",
    # LLM (Semantic Interpreter)
    "openai>=1.30",
    # Notifications
    "slack-sdk>=3.27",
    # Settings / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # HTTP client
    "httpx>=0.27",
    # Security
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "cryptography>=42",
    # RFP 파일 추출
    "pymupdf>=1.24",        # PDF
    "python-docx>=1.1",     # DOCX
    "pyhwp>=0.1b15",        # HWP (한글 워드프로세서)
    "greenlet>=3.4.0",
    "aiomysql>=0.3.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "bcrypt==4.0.1",
    # Google Slides / Drive 연동
    "google-api-python-client>=2.130",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    # GitLab 연동
    "python-gitlab>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
